assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    pointer-events: auto;
}

html {
    scroll-behavior: smooth;
    overflow-y: scroll;
}

:root {
    font-size: 16px;
    --color1: #000000;
    --color2: rgb(223, 223, 223);
    --color3: rgb(123, 123, 123);
    --font1: GapSans; 
    --font2: GapSansBold;
    --font3: DejaVuSans;
}

body{
    background-color: var(--color2);
    border: 2px solid black;
}

a{
    text-decoration: none;
    color: var(--color1);
}

li{
    list-style: none;
}

/*TEXT*/
.section-text {
    width: 50vw;
    padding: 20px;
    padding-top:10px;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    overflow-y: scroll;
}

h1, p, h2, ul {
    font-family: var(--font1);
    color: var(--color1);
    font-style: normal;
}

h1 {
    font-size: 5rem;
    letter-spacing: 2%;
    line-height: 0.9;
    font-family: var(--font2);
}

h2 {
    font-size: 1.4rem;
    padding-bottom: 20px;
    padding-top: 20px;
    margin-left: 25px;
    letter-spacing: 12%;
}

p {
    font-size: 1rem;
    line-height: 1.3;
    font-family: var(--font3), Arial, Helvetica, sans-serif;
    letter-spacing: -1%;
    word-spacing: -10%;
    hyphens: auto;
}

.nowrap{
    hyphens: none;
    word-break:keep-all;
}

.link-list{
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    align-items: flex-end;
}

.link-list-item{
    text-decoration: underline;
    letter-spacing: 0.05rem;
}

.container-project-details{
    position: fixed;
    top: 0;
    left:0;
    padding: 20px;
    width: 50vw;
    height: 75vh;
    opacity: 0;
    transition: opacity 0.3s ease;
    border-top: 2px solid var(--color1);
    border-left: 2px solid var(--color1);
    border-right: 2px solid var(--color1);
    margin: 0;
}

.link-list-item:hover + .container-project-details  {
    opacity: 1;
}

.container-body-text p:nth-child(n+2){
    text-indent: 25px;
}

#detail-description p:nth-of-type(n+2) {
    text-indent: 25px;
  }

.headline-projects{
    padding-bottom: 10px;
}

sup {
    font-size: 16%;
    word-break: none;
    text-transform: uppercase;
    margin-left: -12px;
    letter-spacing: 5%;
    font-family: var(--font3), Arial, Arial, Helvetica, sans-serif;
    hyphens: none;
    word-break: keep-all;
}

.bottom-section{
    z-index: 10;
}
/*IMAGES*/
.section-preview-images{
    display: flex;
    flex-direction: column;
    width: 50vw;
    height: 100vh;
    position: fixed;
    bottom: 0;
    right:0;
    align-items: flex-end;
    overflow-y: hidden;
    border: 2px solid black;
    overflow: hidden;
    overflow: -moz-hidden-unscrollable;
}

.section-preview-images::-webkit-scrollbar {
    display: none;
  }


.container-images {
    display: flex;
    flex-direction: column;
    transition: transform 0.5s ease;
    will-change: transform;
  }

.container-images.paused {
    animation-play-state: paused;
}

.images-preview{
    width: 100%;
    height: auto;
    vertical-align: bottom;
    border: 2px solid black;

}

@keyframes images-moving-up {
    0% {
        transform: translateY(0);
      }
      50% {
        transform: translateY(-95%);
      }
    100%{
        transform: translateY(0);
    }
}

.container-images:hover{
    animation-play-state: paused;
}

.container-project-details.visible {
    opacity: 1;
}

@media screen and (min-width: 1920px){
    :root{
        font-size: 24px;
    }
}

